--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "classnames": "^2.3.2",
+    "openai": "^4.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "react-typed": "^1.2.0",
+    "react-visibility-sensor": "^5.1.1",
     "swiper": "^11.0.3",
     "web-vitals": "^2.1.0"
   },
